--- a/SkillFactory/PY-11. Базовые приёмы работы с данными в Pandas/1_Введение.ipynb
+++ b/SkillFactory/PY-11. Базовые приёмы работы с данными в Pandas/1_Введение.ipynb
@@ -2808,9 +2808,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# Задание 6.12\n",
     "# 1 point possible (graded)\n",
@@ -2826,7 +2834,29 @@
     "# до 23 часов (включительно).\n",
     "# Во сколько раз количество поездок, совершённых днём, больше, чем количество поездок, совёршенных ночью,\n",
     "# за представленный в данных период времени? Ответ округлите до целых.\n",
-    "bike_data['starttime']"
+    "def get_time(time):\n",
+    "    if 0 <= time <= 6:\n",
+    "        return 'night'\n",
+    "    elif 6 < time <= 12:\n",
+    "        return 'morning'\n",
+    "    elif 12 < time <= 18:\n",
+    "        return 'day'\n",
+    "    elif 18 < time <= 23:\n",
+    "        return 'evening'\n",
+    "    else:\n",
+    "        return 'else'\n",
+    "# bike_data['time_of_day'] = bike_data['starttime'].dt.hour.apply(get_time)\n",
+    "# a = bike_data[bike_data['time_of_day'] == 'day'] \n",
+    "# b = bike_data[bike_data['time_of_day'] == 'night']\n",
+    "# print(a/b)\n",
+    "bike_data['time_of_day'] = bike_data['starttime'].dt.hour.apply(get_time)\n",
+    "a = bike_data[bike_data['time_of_day'] == 'day'].shape[0]\n",
+    "b = bike_data[bike_data['time_of_day'] == 'night'].shape[0]\n",
+    "print(round(a / b))\n",
+    "\n",
+    "    \n",
+    "        \n",
+    "    "
    ]
   }
  ],
