--- a/SkillFactory/PY-12.Продвинутые методы работы с данными в Pandas/Продвинутые методы роботы с данными в Pandas.ipynb
+++ b/SkillFactory/PY-12.Продвинутые методы работы с данными в Pandas/Продвинутые методы роботы с данными в Pandas.ipynb
@@ -6208,6 +6208,248 @@
     "products = pd.read_csv('data/orders_and_products/products.csv', sep=';')\n",
     "products.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17    0\n",
+       "Name: Order ID, dtype: int64"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders_products = orders.merge(\n",
+    "    products, \n",
+    "    left_on='ID товара',\n",
+    "    right_on='Product_ID',\n",
+    "    how='left')\n",
+    "orders_products.tail(1)['Order ID']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Дата создания</th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>ID Покупателя</th>\n",
+       "      <th>Статус</th>\n",
+       "      <th>Оплачен</th>\n",
+       "      <th>Отменен</th>\n",
+       "      <th>Отгружен</th>\n",
+       "      <th>ID товара</th>\n",
+       "      <th>Количество</th>\n",
+       "      <th>Product_ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>CURRENCY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>09.11.2019 21:55:51</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Принят, ожидается оплата</td>\n",
+       "      <td>Нет</td>\n",
+       "      <td>Нет</td>\n",
+       "      <td>Нет</td>\n",
+       "      <td>103</td>\n",
+       "      <td>5</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>Носки Подарочные, муж</td>\n",
+       "      <td>199.0</td>\n",
+       "      <td>RUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>09.11.2019 15:05:57</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Принят, ожидается оплата</td>\n",
+       "      <td>Нет</td>\n",
+       "      <td>Нет</td>\n",
+       "      <td>Нет</td>\n",
+       "      <td>86</td>\n",
+       "      <td>100</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>Носки Простые, муж</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>RUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>09.11.2019 15:05:57</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Принят, ожидается оплата</td>\n",
+       "      <td>Нет</td>\n",
+       "      <td>Нет</td>\n",
+       "      <td>Нет</td>\n",
+       "      <td>104</td>\n",
+       "      <td>10</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>Носки Подарочные, жен</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>RUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>09.11.2019 12:50:07</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Принят, ожидается оплата</td>\n",
+       "      <td>Нет</td>\n",
+       "      <td>Нет</td>\n",
+       "      <td>Нет</td>\n",
+       "      <td>104</td>\n",
+       "      <td>7</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>Носки Подарочные, жен</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>RUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>09.11.2019 12:00:00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Принят, ожидается оплата</td>\n",
+       "      <td>Нет</td>\n",
+       "      <td>Нет</td>\n",
+       "      <td>Нет</td>\n",
+       "      <td>104</td>\n",
+       "      <td>5</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>Носки Подарочные, жен</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>RUR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Дата создания  Order ID  ID Покупателя                    Статус  \\\n",
+       "0  09.11.2019 21:55:51         9             10  Принят, ожидается оплата   \n",
+       "1  09.11.2019 15:05:57         8              9  Принят, ожидается оплата   \n",
+       "2  09.11.2019 15:05:57         8              9  Принят, ожидается оплата   \n",
+       "3  09.11.2019 12:50:07         7              8  Принят, ожидается оплата   \n",
+       "4  09.11.2019 12:00:00         6              1  Принят, ожидается оплата   \n",
+       "\n",
+       "  Оплачен Отменен Отгружен  ID товара  Количество  Product_ID  \\\n",
+       "0     Нет     Нет      Нет        103           5       103.0   \n",
+       "1     Нет     Нет      Нет         86         100        86.0   \n",
+       "2     Нет     Нет      Нет        104          10       104.0   \n",
+       "3     Нет     Нет      Нет        104           7       104.0   \n",
+       "4     Нет     Нет      Нет        104           5       104.0   \n",
+       "\n",
+       "                    Name  Price CURRENCY  \n",
+       "0  Носки Подарочные, муж  199.0      RUR  \n",
+       "1     Носки Простые, муж   45.0      RUR  \n",
+       "2  Носки Подарочные, жен  249.0      RUR  \n",
+       "3  Носки Подарочные, жен  249.0      RUR  \n",
+       "4  Носки Подарочные, жен  249.0      RUR  "
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders_products.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6    Носки беговые Camino\n",
+       "Name: Name, dtype: object"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Задание 8.9\n",
+    "# 1 point possible (graded)\n",
+    "# На какой товар была произведена отмена?\n",
+    "# В качестве ответа запишите название этого товара (Name).\n",
+    "orders_products[orders_products['Отменен'] ==  'Да']['Name']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ID Покупателя\n",
+       "7    17096.0\n",
+       "5    13043.0\n",
+       "8     1344.0\n",
+       "1        0.0\n",
+       "Name: profit, dtype: float64"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Задание 8.10\n",
+    "# 1 point possible (graded)\n",
+    "# Какой покупатель принёс наибольшую суммарную прибыль интернет-магазину за указанный период?\n",
+    "# В ответ запишите идентификатор этого покупателя (ID Покупателя).\n",
+    "# Прибыль состоит только из оплаченных заказов и рассчитывается как количество купленного товара, умноженное на его цену.\n",
+    "orders_products['profit'] = orders_products['Количество'] * orders_products['Price']\n",
+    "mask = orders_products['Оплачен'] == 'Да'\n",
+    "orders_products[mask].groupby('ID Покупателя')['profit'].sum().sort_values(ascending=False)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
