--- a/SkillFactory/PY-13. Визуализация/Visualization_Seaborn.ipynb
+++ b/SkillFactory/PY-13. Визуализация/Visualization_Seaborn.ipynb
@@ -272,13 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "id": "19c8fcf2",
    "metadata": {},
    "outputs": [],
    "source": [
     "covid_df['death_rate'] = (covid_df['deaths']/covid_df['confirmed'])*100\n",
-    "covid_df['recover_rate'] = (covid_df['recovered']/covid_df['confirmed'])*100"
+    "covid_df['recover_rate'] = (covid_df['recovered']/covid_df['confirmed'])*100\n",
+    "covid_df.to_csv('data/covid_df.csv', index=False)"
    ]
   },
   {
